# pixel_aware_gyro_aided_klt_feature_tracker

./: .gitignore  CMakeLists.txt  README.en.md  README.md  build.sh  build_ros.sh
Examples/Demo/: RealSenseD435i.cpp  RealSenseD435i.yaml
Examples/ROS/ROS_Demo_Feature_Tracking/: CMakeLists.txt  manifest.xml
Examples/ROS/ROS_Demo_Feature_Tracking/config/: EuRoC.yaml  OMD.yaml  RealSenseD435i.yaml  data_aerial_scene.yaml  data_desk_scene.yaml  rotor_sim.yaml
Examples/ROS/ROS_Demo_Feature_Tracking/data/SuperPoints/MH_01_easy/: 1403636579763555584.txt  1403636579813555456.txt  1403636579863555328.txt  1403636579913555456.txt  1403636579963555584.txt  1403636580013555456.txt  1403636580063555584.txt  1403636580113555456.txt  1403636580163555328.txt  1403636580213555456.txt  1403636580263555584.txt  1403636580313555456.txt  1403636580363555328.txt  1403636580413555456.txt  1403636580463555584.txt  1403636580513555456.txt  1403636580563555584.txt  1403636580613555456.txt  1403636580663555328.txt  1403636580713555456.txt  1403636580763555584.txt  1403636580813555456.txt  1403636580863555328.txt  1403636580913555456.txt  1403636580963555584.txt  1403636581013555456.txt  1403636581063555584.txt  1403636581113555456.txt  1403636581163555328.txt  1403636581213555456.txt  1403636581263555584.txt  1403636581313555456.txt  1403636581363555328.txt  (+3650 more)
Examples/ROS/ROS_Demo_Feature_Tracking/include/: common.h
Examples/ROS/ROS_Demo_Feature_Tracking/launch/: AerialScene.launch  DeskScene.launch  EuRoC.launch  RealSenseD435i.launch
Examples/ROS/ROS_Demo_Feature_Tracking/src/: feature_tracker.cpp
config/: EuRoC.yaml  RealSenseD435i.yaml  data_aerial_scene.yaml
include/: ORBDetectAndDespMatcher.h  ORBextractor.h  common.h  frame.h  gyro_aided_tracker.h  imu_types.h  patch_match.h  utils.h
launch/: AerialScene.launch  DeskScene.launch  EuRoC.launch  RealSenseD435i.launch
src/: ORBDetectAndDespMatcher.cpp  ORBDetectAndDespMatcher.h  ORBextractor.cc  ORBextractor.h  common.h  frame.cpp  frame.h  gyro_aided_tracker.cpp  gyro_predict_matcher.cpp  gyro_predict_matcher.h  imu_types.cpp  imu_types.h  patch_match.cpp  patch_match.h  utils.cpp  utils.h
(+23374 files in other folders)
